Adjusted function call params

--- a/1.train_models/log_reg_plates_cp_fs_data/plate_1/train_model.ipynb
+++ b/1.train_models/log_reg_plates_cp_fs_data/plate_1/train_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jukit_cell_id": "ejlw4X3ZaR"
+    "jukit_cell_id": "9kOKvRXq4e"
    },
    "source": [
     "# Training a Logistic Regression Model"
@@ -23,25 +23,26 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:38:59.748957Z",
-     "iopub.status.busy": "2023-06-30T23:38:59.748808Z",
-     "iopub.status.idle": "2023-06-30T23:38:59.953695Z",
-     "shell.execute_reply": "2023-06-30T23:38:59.953285Z"
+     "iopub.execute_input": "2023-07-01T00:51:03.871670Z",
+     "iopub.status.busy": "2023-07-01T00:51:03.871573Z",
+     "iopub.status.idle": "2023-07-01T00:51:04.255486Z",
+     "shell.execute_reply": "2023-07-01T00:51:04.255166Z"
     },
-    "jukit_cell_id": "FKd1dIo45E"
+    "jukit_cell_id": "XnaEnnB6b0"
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sys\n",
     "from pathlib import Path\n",
-    "from joblib import dump"
+    "from joblib import dump\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "jukit_cell_id": "F4T2C3cxtm"
+    "jukit_cell_id": "nz0bLO8j8I"
    },
    "source": [
     "## Find the git root Directory"
@@ -52,12 +53,12 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:38:59.955559Z",
-     "iopub.status.busy": "2023-06-30T23:38:59.955286Z",
-     "iopub.status.idle": "2023-06-30T23:38:59.957882Z",
-     "shell.execute_reply": "2023-06-30T23:38:59.957577Z"
+     "iopub.execute_input": "2023-07-01T00:51:04.257419Z",
+     "iopub.status.busy": "2023-07-01T00:51:04.257051Z",
+     "iopub.status.idle": "2023-07-01T00:51:04.259674Z",
+     "shell.execute_reply": "2023-07-01T00:51:04.259413Z"
     },
-    "jukit_cell_id": "Iz4nqgONsd"
+    "jukit_cell_id": "FKd1dIo45E"
    },
    "outputs": [],
    "source": [
@@ -93,10 +94,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:38:59.959174Z",
-     "iopub.status.busy": "2023-06-30T23:38:59.958913Z",
-     "iopub.status.idle": "2023-06-30T23:39:00.134901Z",
-     "shell.execute_reply": "2023-06-30T23:39:00.134512Z"
+     "iopub.execute_input": "2023-07-01T00:51:04.261025Z",
+     "iopub.status.busy": "2023-07-01T00:51:04.260745Z",
+     "iopub.status.idle": "2023-07-01T00:51:04.262734Z",
+     "shell.execute_reply": "2023-07-01T00:51:04.262481Z"
     },
     "jukit_cell_id": "wRZI5OrJHU"
    },
@@ -111,10 +112,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:39:00.136580Z",
-     "iopub.status.busy": "2023-06-30T23:39:00.136337Z",
-     "iopub.status.idle": "2023-06-30T23:39:00.138206Z",
-     "shell.execute_reply": "2023-06-30T23:39:00.137913Z"
+     "iopub.execute_input": "2023-07-01T00:51:04.263971Z",
+     "iopub.status.busy": "2023-07-01T00:51:04.263675Z",
+     "iopub.status.idle": "2023-07-01T00:51:04.265293Z",
+     "shell.execute_reply": "2023-07-01T00:51:04.265066Z"
     },
     "jukit_cell_id": "W0r3iUcGVA"
    },
@@ -138,10 +139,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:39:00.139383Z",
-     "iopub.status.busy": "2023-06-30T23:39:00.139183Z",
-     "iopub.status.idle": "2023-06-30T23:39:00.141400Z",
-     "shell.execute_reply": "2023-06-30T23:39:00.141108Z"
+     "iopub.execute_input": "2023-07-01T00:51:04.266518Z",
+     "iopub.status.busy": "2023-07-01T00:51:04.266263Z",
+     "iopub.status.idle": "2023-07-01T00:51:04.268364Z",
+     "shell.execute_reply": "2023-07-01T00:51:04.268114Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
@@ -175,10 +176,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:39:00.142561Z",
-     "iopub.status.busy": "2023-06-30T23:39:00.142356Z",
-     "iopub.status.idle": "2023-06-30T23:39:00.167908Z",
-     "shell.execute_reply": "2023-06-30T23:39:00.167566Z"
+     "iopub.execute_input": "2023-07-01T00:51:04.269626Z",
+     "iopub.status.busy": "2023-07-01T00:51:04.269367Z",
+     "iopub.status.idle": "2023-07-01T00:51:04.295690Z",
+     "shell.execute_reply": "2023-07-01T00:51:04.295417Z"
     },
     "jukit_cell_id": "A8cPG2OifP"
    },
@@ -201,10 +202,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:39:00.169410Z",
-     "iopub.status.busy": "2023-06-30T23:39:00.169171Z",
-     "iopub.status.idle": "2023-06-30T23:39:01.105911Z",
-     "shell.execute_reply": "2023-06-30T23:39:01.105481Z"
+     "iopub.execute_input": "2023-07-01T00:51:04.297080Z",
+     "iopub.status.busy": "2023-07-01T00:51:04.296922Z",
+     "iopub.status.idle": "2023-07-01T00:51:05.196216Z",
+     "shell.execute_reply": "2023-07-01T00:51:05.195816Z"
     },
     "jukit_cell_id": "L4K1PaebDE"
    },
@@ -213,13 +214,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:128: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:156: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:129: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:157: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -229,7 +230,9 @@
     }
    ],
    "source": [
-    "lr, testdf, le = au.get_model_data(platedf)"
+    "lr = LogisticRegression(max_iter=1000, solver=\"sag\", random_state=rnd_val, n_jobs=-1)\n",
+    "\n",
+    "lr, testdf, le = au.get_model_data(platedf, lr)"
    ]
   },
   {
@@ -246,10 +249,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:39:01.107727Z",
-     "iopub.status.busy": "2023-06-30T23:39:01.107610Z",
-     "iopub.status.idle": "2023-06-30T23:39:01.121145Z",
-     "shell.execute_reply": "2023-06-30T23:39:01.120873Z"
+     "iopub.execute_input": "2023-07-01T00:51:05.198289Z",
+     "iopub.status.busy": "2023-07-01T00:51:05.198055Z",
+     "iopub.status.idle": "2023-07-01T00:51:05.215953Z",
+     "shell.execute_reply": "2023-07-01T00:51:05.215667Z"
     },
     "jukit_cell_id": "inswCM144a"
    },
