Adjusted function call params for plate 2

--- a/1.train_models/log_reg_plates_cp_fs_data/plate_2/train_model.ipynb
+++ b/1.train_models/log_reg_plates_cp_fs_data/plate_2/train_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jukit_cell_id": "ejlw4X3ZaR"
+    "jukit_cell_id": "9kOKvRXq4e"
    },
    "source": [
     "# Training a Logistic Regression Model"
@@ -23,25 +23,26 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:45:47.303390Z",
-     "iopub.status.busy": "2023-06-30T23:45:47.303065Z",
-     "iopub.status.idle": "2023-06-30T23:45:47.510534Z",
-     "shell.execute_reply": "2023-06-30T23:45:47.510094Z"
+     "iopub.execute_input": "2023-07-01T00:54:13.647831Z",
+     "iopub.status.busy": "2023-07-01T00:54:13.647734Z",
+     "iopub.status.idle": "2023-07-01T00:54:14.073549Z",
+     "shell.execute_reply": "2023-07-01T00:54:14.073230Z"
     },
-    "jukit_cell_id": "FKd1dIo45E"
+    "jukit_cell_id": "XnaEnnB6b0"
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sys\n",
     "from pathlib import Path\n",
-    "from joblib import dump"
+    "from joblib import dump\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "jukit_cell_id": "F4T2C3cxtm"
+    "jukit_cell_id": "nz0bLO8j8I"
    },
    "source": [
     "## Find the git root Directory"
@@ -52,12 +53,12 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:45:47.512337Z",
-     "iopub.status.busy": "2023-06-30T23:45:47.511948Z",
-     "iopub.status.idle": "2023-06-30T23:45:47.514715Z",
-     "shell.execute_reply": "2023-06-30T23:45:47.514386Z"
+     "iopub.execute_input": "2023-07-01T00:54:14.075402Z",
+     "iopub.status.busy": "2023-07-01T00:54:14.075179Z",
+     "iopub.status.idle": "2023-07-01T00:54:14.077816Z",
+     "shell.execute_reply": "2023-07-01T00:54:14.077551Z"
     },
-    "jukit_cell_id": "Iz4nqgONsd"
+    "jukit_cell_id": "FKd1dIo45E"
    },
    "outputs": [],
    "source": [
@@ -93,10 +94,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:45:47.516167Z",
-     "iopub.status.busy": "2023-06-30T23:45:47.515933Z",
-     "iopub.status.idle": "2023-06-30T23:45:47.697199Z",
-     "shell.execute_reply": "2023-06-30T23:45:47.696746Z"
+     "iopub.execute_input": "2023-07-01T00:54:14.078979Z",
+     "iopub.status.busy": "2023-07-01T00:54:14.078790Z",
+     "iopub.status.idle": "2023-07-01T00:54:14.080638Z",
+     "shell.execute_reply": "2023-07-01T00:54:14.080387Z"
     },
     "jukit_cell_id": "wRZI5OrJHU"
    },
@@ -111,10 +112,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:45:47.698672Z",
-     "iopub.status.busy": "2023-06-30T23:45:47.698440Z",
-     "iopub.status.idle": "2023-06-30T23:45:47.700344Z",
-     "shell.execute_reply": "2023-06-30T23:45:47.700021Z"
+     "iopub.execute_input": "2023-07-01T00:54:14.081628Z",
+     "iopub.status.busy": "2023-07-01T00:54:14.081476Z",
+     "iopub.status.idle": "2023-07-01T00:54:14.083026Z",
+     "shell.execute_reply": "2023-07-01T00:54:14.082777Z"
     },
     "jukit_cell_id": "W0r3iUcGVA"
    },
@@ -138,10 +139,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:45:47.701583Z",
-     "iopub.status.busy": "2023-06-30T23:45:47.701299Z",
-     "iopub.status.idle": "2023-06-30T23:45:47.703634Z",
-     "shell.execute_reply": "2023-06-30T23:45:47.703300Z"
+     "iopub.execute_input": "2023-07-01T00:54:14.084061Z",
+     "iopub.status.busy": "2023-07-01T00:54:14.083910Z",
+     "iopub.status.idle": "2023-07-01T00:54:14.085915Z",
+     "shell.execute_reply": "2023-07-01T00:54:14.085665Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
@@ -175,10 +176,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:45:47.704941Z",
-     "iopub.status.busy": "2023-06-30T23:45:47.704623Z",
-     "iopub.status.idle": "2023-06-30T23:45:47.735030Z",
-     "shell.execute_reply": "2023-06-30T23:45:47.734631Z"
+     "iopub.execute_input": "2023-07-01T00:54:14.086923Z",
+     "iopub.status.busy": "2023-07-01T00:54:14.086775Z",
+     "iopub.status.idle": "2023-07-01T00:54:14.115862Z",
+     "shell.execute_reply": "2023-07-01T00:54:14.115539Z"
     },
     "jukit_cell_id": "A8cPG2OifP"
    },
@@ -201,10 +202,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:45:47.736696Z",
-     "iopub.status.busy": "2023-06-30T23:45:47.736409Z",
-     "iopub.status.idle": "2023-06-30T23:45:50.401433Z",
-     "shell.execute_reply": "2023-06-30T23:45:50.400973Z"
+     "iopub.execute_input": "2023-07-01T00:54:14.117449Z",
+     "iopub.status.busy": "2023-07-01T00:54:14.117309Z",
+     "iopub.status.idle": "2023-07-01T00:54:16.806799Z",
+     "shell.execute_reply": "2023-07-01T00:54:16.806394Z"
     },
     "jukit_cell_id": "L4K1PaebDE"
    },
@@ -213,13 +214,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:128: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:156: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:129: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:157: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -229,7 +230,9 @@
     }
    ],
    "source": [
-    "lr, testdf, le = au.get_model_data(platedf)"
+    "lr = LogisticRegression(max_iter=1000, solver=\"sag\", random_state=rnd_val, n_jobs=-1)\n",
+    "\n",
+    "lr, testdf, le = au.get_model_data(platedf, lr)"
    ]
   },
   {
@@ -246,10 +249,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-30T23:45:50.403238Z",
-     "iopub.status.busy": "2023-06-30T23:45:50.403108Z",
-     "iopub.status.idle": "2023-06-30T23:45:50.472614Z",
-     "shell.execute_reply": "2023-06-30T23:45:50.472337Z"
+     "iopub.execute_input": "2023-07-01T00:54:16.808581Z",
+     "iopub.status.busy": "2023-07-01T00:54:16.808469Z",
+     "iopub.status.idle": "2023-07-01T00:54:16.875195Z",
+     "shell.execute_reply": "2023-07-01T00:54:16.874896Z"
     },
     "jukit_cell_id": "inswCM144a"
    },
