Updated function call to choose cross_correlation

--- a/1.train_models/log_reg_plates_cp_fs_data/plate_1/train_model.ipynb
+++ b/1.train_models/log_reg_plates_cp_fs_data/plate_1/train_model.ipynb
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:51:03.871670Z",
-     "iopub.status.busy": "2023-07-01T00:51:03.871573Z",
-     "iopub.status.idle": "2023-07-01T00:51:04.255486Z",
-     "shell.execute_reply": "2023-07-01T00:51:04.255166Z"
+     "iopub.execute_input": "2023-07-01T01:21:37.371148Z",
+     "iopub.status.busy": "2023-07-01T01:21:37.370796Z",
+     "iopub.status.idle": "2023-07-01T01:21:37.761819Z",
+     "shell.execute_reply": "2023-07-01T01:21:37.761475Z"
     },
     "jukit_cell_id": "XnaEnnB6b0"
    },
@@ -53,10 +53,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:51:04.257419Z",
-     "iopub.status.busy": "2023-07-01T00:51:04.257051Z",
-     "iopub.status.idle": "2023-07-01T00:51:04.259674Z",
-     "shell.execute_reply": "2023-07-01T00:51:04.259413Z"
+     "iopub.execute_input": "2023-07-01T01:21:37.763589Z",
+     "iopub.status.busy": "2023-07-01T01:21:37.763366Z",
+     "iopub.status.idle": "2023-07-01T01:21:37.765988Z",
+     "shell.execute_reply": "2023-07-01T01:21:37.765733Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
@@ -94,10 +94,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:51:04.261025Z",
-     "iopub.status.busy": "2023-07-01T00:51:04.260745Z",
-     "iopub.status.idle": "2023-07-01T00:51:04.262734Z",
-     "shell.execute_reply": "2023-07-01T00:51:04.262481Z"
+     "iopub.execute_input": "2023-07-01T01:21:37.767160Z",
+     "iopub.status.busy": "2023-07-01T01:21:37.766919Z",
+     "iopub.status.idle": "2023-07-01T01:21:37.768914Z",
+     "shell.execute_reply": "2023-07-01T01:21:37.768661Z"
     },
     "jukit_cell_id": "wRZI5OrJHU"
    },
@@ -112,10 +112,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:51:04.263971Z",
-     "iopub.status.busy": "2023-07-01T00:51:04.263675Z",
-     "iopub.status.idle": "2023-07-01T00:51:04.265293Z",
-     "shell.execute_reply": "2023-07-01T00:51:04.265066Z"
+     "iopub.execute_input": "2023-07-01T01:21:37.769992Z",
+     "iopub.status.busy": "2023-07-01T01:21:37.769757Z",
+     "iopub.status.idle": "2023-07-01T01:21:37.771428Z",
+     "shell.execute_reply": "2023-07-01T01:21:37.771179Z"
     },
     "jukit_cell_id": "W0r3iUcGVA"
    },
@@ -139,10 +139,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:51:04.266518Z",
-     "iopub.status.busy": "2023-07-01T00:51:04.266263Z",
-     "iopub.status.idle": "2023-07-01T00:51:04.268364Z",
-     "shell.execute_reply": "2023-07-01T00:51:04.268114Z"
+     "iopub.execute_input": "2023-07-01T01:21:37.772547Z",
+     "iopub.status.busy": "2023-07-01T01:21:37.772350Z",
+     "iopub.status.idle": "2023-07-01T01:21:37.774451Z",
+     "shell.execute_reply": "2023-07-01T01:21:37.774199Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
@@ -176,10 +176,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:51:04.269626Z",
-     "iopub.status.busy": "2023-07-01T00:51:04.269367Z",
-     "iopub.status.idle": "2023-07-01T00:51:04.295690Z",
-     "shell.execute_reply": "2023-07-01T00:51:04.295417Z"
+     "iopub.execute_input": "2023-07-01T01:21:37.775566Z",
+     "iopub.status.busy": "2023-07-01T01:21:37.775370Z",
+     "iopub.status.idle": "2023-07-01T01:21:37.804424Z",
+     "shell.execute_reply": "2023-07-01T01:21:37.804147Z"
     },
     "jukit_cell_id": "A8cPG2OifP"
    },
@@ -202,10 +202,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:51:04.297080Z",
-     "iopub.status.busy": "2023-07-01T00:51:04.296922Z",
-     "iopub.status.idle": "2023-07-01T00:51:05.196216Z",
-     "shell.execute_reply": "2023-07-01T00:51:05.195816Z"
+     "iopub.execute_input": "2023-07-01T01:21:37.805828Z",
+     "iopub.status.busy": "2023-07-01T01:21:37.805670Z",
+     "iopub.status.idle": "2023-07-01T01:21:38.729761Z",
+     "shell.execute_reply": "2023-07-01T01:21:38.729199Z"
     },
     "jukit_cell_id": "L4K1PaebDE"
    },
@@ -214,13 +214,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:156: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:158: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:157: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:159: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -232,7 +232,7 @@
    "source": [
     "lr = LogisticRegression(max_iter=1000, solver=\"sag\", random_state=rnd_val, n_jobs=-1)\n",
     "\n",
-    "lr, testdf, le = au.get_model_data(platedf, lr)"
+    "lr, testdf, le = au.get_model_data(platedf, lr, will_cross_validate=True)"
    ]
   },
   {
@@ -249,10 +249,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:51:05.198289Z",
-     "iopub.status.busy": "2023-07-01T00:51:05.198055Z",
-     "iopub.status.idle": "2023-07-01T00:51:05.215953Z",
-     "shell.execute_reply": "2023-07-01T00:51:05.215667Z"
+     "iopub.execute_input": "2023-07-01T01:21:38.732143Z",
+     "iopub.status.busy": "2023-07-01T01:21:38.731882Z",
+     "iopub.status.idle": "2023-07-01T01:21:38.752571Z",
+     "shell.execute_reply": "2023-07-01T01:21:38.752188Z"
     },
     "jukit_cell_id": "inswCM144a"
    },
