Updated function call to choose cross_correlation

--- a/1.train_models/log_reg_plates_cp_fs_data/plate_2/train_model.ipynb
+++ b/1.train_models/log_reg_plates_cp_fs_data/plate_2/train_model.ipynb
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:54:13.647831Z",
-     "iopub.status.busy": "2023-07-01T00:54:13.647734Z",
-     "iopub.status.idle": "2023-07-01T00:54:14.073549Z",
-     "shell.execute_reply": "2023-07-01T00:54:14.073230Z"
+     "iopub.execute_input": "2023-07-01T01:24:32.781211Z",
+     "iopub.status.busy": "2023-07-01T01:24:32.781054Z",
+     "iopub.status.idle": "2023-07-01T01:24:33.168094Z",
+     "shell.execute_reply": "2023-07-01T01:24:33.167647Z"
     },
     "jukit_cell_id": "XnaEnnB6b0"
    },
@@ -53,10 +53,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:54:14.075402Z",
-     "iopub.status.busy": "2023-07-01T00:54:14.075179Z",
-     "iopub.status.idle": "2023-07-01T00:54:14.077816Z",
-     "shell.execute_reply": "2023-07-01T00:54:14.077551Z"
+     "iopub.execute_input": "2023-07-01T01:24:33.169777Z",
+     "iopub.status.busy": "2023-07-01T01:24:33.169439Z",
+     "iopub.status.idle": "2023-07-01T01:24:33.172139Z",
+     "shell.execute_reply": "2023-07-01T01:24:33.171801Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
@@ -94,10 +94,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:54:14.078979Z",
-     "iopub.status.busy": "2023-07-01T00:54:14.078790Z",
-     "iopub.status.idle": "2023-07-01T00:54:14.080638Z",
-     "shell.execute_reply": "2023-07-01T00:54:14.080387Z"
+     "iopub.execute_input": "2023-07-01T01:24:33.173415Z",
+     "iopub.status.busy": "2023-07-01T01:24:33.173183Z",
+     "iopub.status.idle": "2023-07-01T01:24:33.175285Z",
+     "shell.execute_reply": "2023-07-01T01:24:33.174966Z"
     },
     "jukit_cell_id": "wRZI5OrJHU"
    },
@@ -112,10 +112,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:54:14.081628Z",
-     "iopub.status.busy": "2023-07-01T00:54:14.081476Z",
-     "iopub.status.idle": "2023-07-01T00:54:14.083026Z",
-     "shell.execute_reply": "2023-07-01T00:54:14.082777Z"
+     "iopub.execute_input": "2023-07-01T01:24:33.176483Z",
+     "iopub.status.busy": "2023-07-01T01:24:33.176269Z",
+     "iopub.status.idle": "2023-07-01T01:24:33.177986Z",
+     "shell.execute_reply": "2023-07-01T01:24:33.177683Z"
     },
     "jukit_cell_id": "W0r3iUcGVA"
    },
@@ -139,10 +139,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:54:14.084061Z",
-     "iopub.status.busy": "2023-07-01T00:54:14.083910Z",
-     "iopub.status.idle": "2023-07-01T00:54:14.085915Z",
-     "shell.execute_reply": "2023-07-01T00:54:14.085665Z"
+     "iopub.execute_input": "2023-07-01T01:24:33.179180Z",
+     "iopub.status.busy": "2023-07-01T01:24:33.178912Z",
+     "iopub.status.idle": "2023-07-01T01:24:33.181137Z",
+     "shell.execute_reply": "2023-07-01T01:24:33.180828Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
@@ -176,10 +176,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:54:14.086923Z",
-     "iopub.status.busy": "2023-07-01T00:54:14.086775Z",
-     "iopub.status.idle": "2023-07-01T00:54:14.115862Z",
-     "shell.execute_reply": "2023-07-01T00:54:14.115539Z"
+     "iopub.execute_input": "2023-07-01T01:24:33.182285Z",
+     "iopub.status.busy": "2023-07-01T01:24:33.182072Z",
+     "iopub.status.idle": "2023-07-01T01:24:33.213544Z",
+     "shell.execute_reply": "2023-07-01T01:24:33.213170Z"
     },
     "jukit_cell_id": "A8cPG2OifP"
    },
@@ -202,10 +202,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:54:14.117449Z",
-     "iopub.status.busy": "2023-07-01T00:54:14.117309Z",
-     "iopub.status.idle": "2023-07-01T00:54:16.806799Z",
-     "shell.execute_reply": "2023-07-01T00:54:16.806394Z"
+     "iopub.execute_input": "2023-07-01T01:24:33.214995Z",
+     "iopub.status.busy": "2023-07-01T01:24:33.214842Z",
+     "iopub.status.idle": "2023-07-01T01:24:36.203593Z",
+     "shell.execute_reply": "2023-07-01T01:24:36.203144Z"
     },
     "jukit_cell_id": "L4K1PaebDE"
    },
@@ -214,13 +214,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:156: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:158: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:157: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:159: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -232,7 +232,7 @@
    "source": [
     "lr = LogisticRegression(max_iter=1000, solver=\"sag\", random_state=rnd_val, n_jobs=-1)\n",
     "\n",
-    "lr, testdf, le = au.get_model_data(platedf, lr)"
+    "lr, testdf, le = au.get_model_data(platedf, lr, will_cross_validate=True)"
    ]
   },
   {
@@ -249,10 +249,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-01T00:54:16.808581Z",
-     "iopub.status.busy": "2023-07-01T00:54:16.808469Z",
-     "iopub.status.idle": "2023-07-01T00:54:16.875195Z",
-     "shell.execute_reply": "2023-07-01T00:54:16.874896Z"
+     "iopub.execute_input": "2023-07-01T01:24:36.205392Z",
+     "iopub.status.busy": "2023-07-01T01:24:36.205246Z",
+     "iopub.status.idle": "2023-07-01T01:24:36.273035Z",
+     "shell.execute_reply": "2023-07-01T01:24:36.272686Z"
     },
     "jukit_cell_id": "inswCM144a"
    },
